## CHANGELOG

Here is the list of the changes and features provided by the Rainbow-CLI

### v0.3.10

 - [USER] Create a new user

 - [USER] List of users

 - [USER] Delete a user

 - [MASS PRO] Import CSV file of users

 - [COMPANY] Remove all users from a company

### v0.2.7

 - [STATUS] Get the status of the API

 - [COMPANY] Retrieve information about a company

 - [COMPANY] Delete a company

 - [COMPANY] Create a new company

 - [COMPANY] List the companies

### v0.1.0

 - [USER] Retrieve the information about the connected user

 - [USER] Log-in to Rainbow