@@ -1,6 +1,6 @@
 {
   "name": "rainbow-cli",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "Rainbow CLI application based on the Rainbow SDK for Node.js",
   "main": "index.js",
   "scripts": {
